--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
-
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/css/splide.min.css">
 
 
   <link rel="icon" type="image/ico" href="/static/images/favicon.ico">
@@ -187,6 +187,7 @@
 
   <script src="static/js/contact-email.js"></script>
   <script src="static/js/light-mode.js"></script>
+  <script src="static/js/splide.js"></script>
 
   <!--Sweet Alert-->
 
@@ -200,6 +201,8 @@
         emailjs.init("user_a8QTjCWqE9AEZDgd6Xxqb");
       })();
     </script>
+
+<script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@2.4.21/dist/js/splide.min.js"></script>
 
 </body>
 
