Add slider for featured titles using splide To show the featured books in the parallax section on the book reviews page, I added them to a splide slider

--- a/templates/book-reviews.html
+++ b/templates/book-reviews.html
@@ -2,44 +2,24 @@
 {% block title %} Reviews | Horror House {% endblock %}
 
 
-
 {% block main_heading %}
         <h1 class="custom-font header center">Featured Titles</h1>
 {% endblock %}
 
 {% block parallax_content %}
-<div class="row">
 
-    <div class="col s12 m6 l4">
-      <div class="card large card-colour">
-        <div class="card-image">
-          <img src="static/images/doctor-sleep.png">
-        </div>
-        <div class="card-content center">
-          <p>Doctor Sleep
-              <br>
-              by Stephen King
-          </p>
-          <div class="center review-btn-position">
-            <a href="/" id="download-button" 
-            class="btn-large waves-effect waves-dark lighten-1 btn-styles review-btn">
-              Read more
-              </a>
-          </div>
-        </div>
-        
-      </div>
-    </div>
-
-    <div class="col s12 m6 l4">
+<div class="splide">
+	<div class="splide__track">
+		<ul class="splide__list">
+			<li class="splide__slide">
         <div class="card large card-colour">
           <div class="card-image">
-            <img src="static/images/bog-of-cats.jpeg">
+            <img src="static/images/doctor-sleep.png">
           </div>
           <div class="card-content center">
-            <p>By the Bog of Cats
-              <br>
-              by Marina Carr 
+            <p>Doctor Sleep
+                <br>
+                by Stephen King
             </p>
             <div class="center review-btn-position">
               <a href="/" id="download-button" 
@@ -50,9 +30,28 @@
           </div>
           
         </div>
+  
+      </li>
+			<li class="splide__slide"><div class="card large card-colour">
+        <div class="card-image">
+          <img src="static/images/bog-of-cats.jpeg">
+        </div>
+        <div class="card-content center">
+          <p>By the Bog of Cats
+            <br>
+            by Marina Carr 
+          </p>
+          <div class="center review-btn-position">
+            <a href="/" id="download-button" 
+            class="btn-large waves-effect waves-dark lighten-1 btn-styles review-btn">
+              Read more
+              </a>
+          </div>
+        </div>
+        
       </div>
-
-      <div class="col s12 m6 l4">
+</li>
+			<li class="splide__slide">
         <div class="card large card-colour">
           <div class="card-image">
             <img src="static/images/let-right-one-in.jpeg">
@@ -71,9 +70,11 @@
           </div>
           
         </div>
-      </div>
 
-  </div>
+      </li>
+		</ul>
+	</div>
+</div>
 {% endblock %}
 
 {% block content %}
@@ -176,3 +177,5 @@
   </div>
 </div>
 {% endblock %}
+
+
