Add accessibility features to the base template A tooltip was added to the dark/light mode toggle. I also made the dark/light mode button keyboard focusable. I did this for the contact button in the footer and the social media buttons

--- a/templates/book-reviews.html
+++ b/templates/book-reviews.html
@@ -21,6 +21,7 @@
                 <br>
                 by Stephen King
             </p>
+            <br>
             <div class="center review-btn-position">
               <a href="/" id="download-button" 
               class="btn-large waves-effect waves-dark lighten-1 btn-styles review-btn">
@@ -41,6 +42,7 @@
             <br>
             by Marina Carr 
           </p>
+          <br>
           <div class="center review-btn-position">
             <a href="/" id="download-button" 
             class="btn-large waves-effect waves-dark lighten-1 btn-styles review-btn">
@@ -57,10 +59,11 @@
             <img src="static/images/let-right-one-in.jpeg">
           </div>
           <div class="card-content center">
-            <p>Let the Right One In
+            <p class="mobile-review-card">Let the Right One In
               <br>
-              John Ajvide Lindqvist
+              by John Ajvide Lindqvist
             </p>
+            <br>
             <div class="center review-btn-position">
               <a href="/" id="download-button" 
               class="btn-large waves-effect waves-dark lighten-1 btn-styles review-btn">
