--- a/static/css/style.css
+++ b/static/css/style.css
@@ -223,6 +223,15 @@ ul#nav-mobile.sidenav {
 
 /* Media Queries */
 
+@media only screen and (max-width : 1100px) {
+.mobile-review-card {
+  font-size: 1.2rem;
+}
+
+}
+
+
+
 
 @media only screen and (max-width : 800px) {
 
