Add card behind light/dark mode icon This card was added to make the icon more visible and give it a higher z-index than the other cards on the site. I tried raising the z-index of the icon on its own, but the cards always had a higher index (even with all positions set). In this case, I added a card behind the icon and styled it to be minimal on the page

--- a/templates/base.html
+++ b/templates/base.html
@@ -70,12 +70,15 @@
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-        <span class="mode-button-position">
-          <i class="small btn-toggle material-icons tooltipped" 
-          tabindex="0" role="tooltip" data-position="bottom" 
-          data-tooltip="Click to toggle dark/light mode">
-            brightness_medium</i>
-        </span>
+        
+          <div class="card btn-toggle">
+            <div class="card-content toggle-card">
+            <i class="small  material-icons tooltipped" tabindex="0" role="tooltip" data-position="bottom"
+              data-tooltip="Click to toggle dark/light mode">
+              brightness_medium</i>
+          </div>
+        </div>
+       
 
         {% block main_heading %}{% endblock %}
 
