--- a/static/css/light-mode.css
+++ b/static/css/light-mode.css
@@ -14,7 +14,7 @@ nav ul a.nav-link-style {
 
 .btn-toggle {
   color: #7B8FA3;
-  text-shadow: 1px 1px 2px white;
+  text-shadow: 1px 1px 2px black;
 }
 
 .btn-large.btn-styles {
