--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,9 +13,15 @@ nav .nav-wrapper {
   width: 100%;
 }
 
-.btn-toggle {
-  margin-left: 70%;
+.card.btn-toggle {
   position: fixed;
+  margin-left: 70%;
+  z-index: 2;
+  background-color: #E84A4D;
+}
+
+div.card-content.toggle-card {
+  padding: 5px;
 }
 
 .mobile-icon {
