--- a/templates/base.html
+++ b/templates/base.html
@@ -193,7 +193,9 @@
 
   <script src="static/js/contact-email.js"></script>
   <script src="static/js/light-mode.js"></script>
-  <script src="static/js/splide.js"></script>
+
+  {% block splide_js %}
+  {% endblock %}
 
   <!--Sweet Alert-->
 
@@ -207,8 +209,6 @@
         emailjs.init("user_a8QTjCWqE9AEZDgd6Xxqb");
       })();
     </script>
-
-<script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@2.4.21/dist/js/splide.min.js"></script>
 
 </body>
 
