Update the main content block name in Jinja on all templates so that it's formatted to block content

--- a/templates/base.html
+++ b/templates/base.html
@@ -83,7 +83,7 @@
         {% block main_heading %}{% endblock %}
 
 
-        {% block parallax_content %}
+        {% block content %}
 
         {% endblock %}
 
@@ -95,7 +95,7 @@
     </div>
 
   </div>
-  {% block content %}
+  {% block below_content %}
   {% endblock %}
   <footer class="page-footer">
     <div class="container">
