--- a/templates/book-reviews.html
+++ b/templates/book-reviews.html
@@ -6,7 +6,7 @@
         <h1 class="custom-font header center">Featured Titles</h1>
 {% endblock %}
 
-{% block parallax_content %}
+{% block content %}
 
 <div class="splide">
 	<div class="splide__track">
@@ -80,7 +80,7 @@
 </div>
 {% endblock %}
 
-{% block content %}
+{% block below_content %}
 
 <div class="icon-sec-background">
   <div class="review-container">
