--- a/templates/login.html
+++ b/templates/login.html
@@ -6,7 +6,7 @@
 <h1 class= "custom-font header center">Login to your account</h1>
 {% endblock %}
 
-{% block parallax_content %}
+{% block content %}
 <div class="row">
   <div class="col s12 l12">
     <div class="card medium card-colour login-card-padding">
