--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 <h1 class="custom-font header center">You're now entering the Horror House</h1>
 {% endblock %}
 
-{% block parallax_content %}
+{% block content %}
 <div class="row">
   <div class="col s12 m12">
     <div class="card card-colour card-margin darken-1">
@@ -31,7 +31,7 @@
 </div>
 {% endblock %}
 
-{% block content %}
+{% block below_content %}
 <div class="icon-sec-background">
   <div class="section">
 
