--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -6,7 +6,7 @@
 <h1 class="custom-font  header center">Create your own account</h1>
 {% endblock %}
 
-{% block parallax_content %}
+{% block content %}
 <div class="row">
   <div class="col s12 l12">
     <div class="card xlarge card-colour signup-card-padding">
