Update book reviews page to pull general book content from MongoDB > Using Jinja for look and properly formatting images on MongoDB, I pulled book content and images from MongoDB to the book reviews page. I also fixed the Materialize card format so that the cards look better on mobile view

--- a/templates/book-reviews.html
+++ b/templates/book-reviews.html
@@ -55,7 +55,7 @@
 <div class="icon-sec-background">
   <div class="review-container">
 
-
+    <h2>Read and create reviews</h2>
     <div class="row">
       {% for books in books %}
       <div class="col s12 m6 l6 xl3">
