Add page for individual reviews Started adding the basic template for the individual reviews by creating a new page and adding it to my python programme. I then added placeholder text, image, and breadcrumbs

--- a/static/css/dark-mode.css
+++ b/static/css/dark-mode.css
@@ -46,6 +46,10 @@
     color: #E84A4D;
   }
 
+ .individual-review-background {
+    background-color: #3e4c59 !important;
+  }
+
   footer.page-footer {
     background-color: #E84A4D;
   }
