--- a/templates/individual-reviews.html
+++ b/templates/individual-reviews.html
@@ -13,9 +13,9 @@
         </div>
       </nav>
     <div class="col l12">
-        <img class="left" src="static/images/bog-of-cats.jpeg">
+      <img src={{books.image}}>
         <div class="center">
-            <h3>Title</h3>
+            <h3>{{books.title}} by {{books.author}}</h3>
             <p>Review</p>
         </div>
 
