Start adding featured books page

--- a/static/css/dark-mode.css
+++ b/static/css/dark-mode.css
@@ -47,7 +47,7 @@
   }
 
  .individual-review-background {
-    background-color: #3e4c59 !important;
+    background-color: #3e4c59;
   }
 
   footer.page-footer {
