--- a/templates/book-reviews.html
+++ b/templates/book-reviews.html
@@ -13,21 +13,21 @@
 <div class="splide">
   <div class="splide__track">
     <ul class="splide__list">
-      {% for featured in featured %}
+      {% for featured_books in featured_books %}
       <li class="splide__slide">
         <div class="card large card-colour">
           <div class="card-image">
-            <img src={{featured.image}}>
+            <img src={{featured_books.image}}>
 
           </div>
           <div class="card-content center">
-            <p class="mobile-review-card">{{featured.title}}
+            <p class="mobile-review-card">{{featured_books.title}}
               <br>
-              by {{featured.author}}
+              by {{featured_books.author}}
             </p>
             <br>
             <div class="center review-btn-position">
-              <a href="#" 
+              <a href="{{ url_for('featured_books', featured_books_id=featured_books._id) }}" 
                 class="btn-large waves-effect waves-dark lighten-1 btn-styles review-btn">
                 Read more
               </a>
