--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -19,11 +19,11 @@
           <div class="row">
             <div class="input-field col s12 l6">
               <i class="material-icons prefix login-icon-light">border_color</i>
-              <input id="first_name" type="text" class="validate">
+              <input id="first_name" type="text" name="first_name" class="validate" pattern=^[a-zA-Z] required>
               <label for="first_name">First Name</label>
             </div>
             <div class="input-field col s12 l6">
-              <input id="last_name" type="text" class="validate">
+              <input id="last_name" type="text" name="last_name" class="validate" pattern=^[a-zA-Z] required>
               <label for="last_name">Last Name</label>
             </div>
           </div>
@@ -31,15 +31,19 @@
           <div class="row">
             <div class="input-field col s12">
               <i class="material-icons prefix login-icon-light">account_box</i>
-              <input id="username" type="text" name="username" class="validate">
+              <input id="username" type="text" name="username" class="validate"
+               minlength="5" maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" required> 
               <label for="username">Username</label>
+              <p>Please create a username of letters &amp; numbers that's 5-15 characters long</p>
             </div>
           </div>
           <div class="row">
             <div class="input-field col s12">
               <i class="material-icons prefix login-icon-light">enhanced_encryption</i>
-              <input id="password" type="password" name="password" class="validate">
+              <input id="password" type="password" name="password" class="validate" 
+              minlength="5" maxlength="15" pattern="^(?=.{5,15})(?=.*[a-z])(?=.*[A-Z])(?=.*[@#$&^]).*$" required>
               <label for="password">Password</label>
+              <p>Password must contain one uppercase &amp; lowercase letter &amp; a number &amp; a special character: @#$&^</p>
             </div>
           </div>
           <div class="center">
